# sen6x

./: CMakeLists.txt  LICENSE  README.md  idf_component.yml  library.properties
examples/esp-idf/: CMakeLists.txt
examples/esp-idf/main/: CMakeLists.txt  idf_component.yml  main.c
examples/sen6x_basic/: sen6x_basic.ino
src/: sen6x.c  sen6x.h  sen6x_esp.h  sen6x_port.cpp  sen6x_port.h
